@@ -1,225 +1,220 @@
 package de.melanx.jea.plugins.vanilla.criteria;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.blaze3d.matrix.MatrixStack;
+import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.math.Vector3f;
 import de.melanx.jea.api.client.IAdvancementInfo;
 import de.melanx.jea.api.client.criterion.ICriterionInfo;
-import de.melanx.jea.plugins.botania.AlfPortalRenderer;
 import de.melanx.jea.render.JeaRender;
 import de.melanx.jea.render.SteveRender;
 import de.melanx.jea.util.IngredientUtil;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.IRecipeLayout;
 import mezz.jei.api.ingredients.IIngredients;
-import net.minecraft.advancements.criterion.ChangeDimensionTrigger;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
+import net.minecraft.advancements.critereon.ChangeDimensionTrigger;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.BlockRendererDispatcher;
-import net.minecraft.client.renderer.IRenderTypeBuffer;
 import net.minecraft.client.renderer.LightTexture;
+import net.minecraft.client.renderer.MultiBufferSource;
+import net.minecraft.client.renderer.block.BlockRenderDispatcher;
+import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
 import net.minecraft.client.renderer.texture.OverlayTexture;
-import net.minecraft.client.renderer.tileentity.TileEntityRenderer;
-import net.minecraft.client.renderer.tileentity.TileEntityRendererDispatcher;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.state.properties.BlockStateProperties;
-import net.minecraft.tileentity.EndPortalTileEntity;
-import net.minecraft.util.Direction;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.vector.Vector3f;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TranslationTextComponent;
-import net.minecraft.world.World;
-import net.minecraftforge.fml.ModList;
+import net.minecraft.core.Direction;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.entity.TheEndPortalBlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 
 import java.util.List;
 import java.util.Objects;
 
-public class ChangeDimensionInfo implements ICriterionInfo<ChangeDimensionTrigger.Instance> {
+public class ChangeDimensionInfo implements ICriterionInfo<ChangeDimensionTrigger.TriggerInstance> {
 
     private static final ResourceLocation MYTHICBOTANY_ALFHEIM = new ResourceLocation("mythicbotany", "alfheim");
     
-    private final EndPortalTileEntity tile = new EndPortalTileEntity();
-    private TileEntityRenderer<EndPortalTileEntity> tileRender = null;
+    private final TheEndPortalBlockEntity tile = new TheEndPortalBlockEntity(JeaRender.BELOW_WORLD, Blocks.END_PORTAL.defaultBlockState());
+    private BlockEntityRenderer<TheEndPortalBlockEntity> tileRender = null;
     
     @Override
-    public Class<ChangeDimensionTrigger.Instance> criterionClass() {
-        return ChangeDimensionTrigger.Instance.class;
+    public Class<ChangeDimensionTrigger.TriggerInstance> criterionClass() {
+        return ChangeDimensionTrigger.TriggerInstance.class;
     }
 
     @Override
-    public void setIngredients(IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.Instance instance, IIngredients ii) {
-        if (World.THE_NETHER.equals(instance.to)) {
-            ii.setInputLists(VanillaTypes.ITEM, ImmutableList.of(
-                    ImmutableList.of(new ItemStack(Items.OBSIDIAN, 10))
+    public void setIngredients(IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.TriggerInstance instance, IIngredients ii) {
+        if (Level.NETHER.equals(instance.to)) {
+            ii.setInputLists(VanillaTypes.ITEM, List.of(
+                    List.of(new ItemStack(Items.OBSIDIAN, 10))
             ));
-        } else if (World.THE_END.equals(instance.to)) {
-            ii.setInputLists(VanillaTypes.ITEM, ImmutableList.of(
-                    ImmutableList.of(new ItemStack(Items.END_PORTAL_FRAME, 12)),
-                    ImmutableList.of(new ItemStack(Items.ENDER_EYE, 12))
+        } else if (Level.END.equals(instance.to)) {
+            ii.setInputLists(VanillaTypes.ITEM, List.of(
+                    List.of(new ItemStack(Items.END_PORTAL_FRAME, 12)),
+                    List.of(new ItemStack(Items.ENDER_EYE, 12))
             ));
         }
     }
 
     @Override
-    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.Instance instance, IIngredients ii) {
+    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.TriggerInstance instance, IIngredients ii) {
         //
     }
 
     @Override
-    public void draw(MatrixStack matrixStack, IRenderTypeBuffer buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.Instance instance, double mouseX, double mouseY) {
+    public void draw(PoseStack poseStack, MultiBufferSource buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.TriggerInstance instance, double mouseX, double mouseY) {
         int y = 6;
         if (instance.from != null) {
-            ITextComponent text = new TranslationTextComponent("jea.item.tooltip.change_dimension.from", IngredientUtil.dim(instance.from.getLocation()));
-            mc.fontRenderer.drawText(matrixStack, text, 5, SPACE_TOP + y, 0x000000);
-            y += (3 + mc.fontRenderer.FONT_HEIGHT);
+            Component text = new TranslatableComponent("jea.item.tooltip.change_dimension.from", IngredientUtil.dim(instance.from.location()));
+            mc.font.draw(poseStack, text, 5, SPACE_TOP + y, 0x000000);
+            y += (3 + mc.font.lineHeight);
         }
         if (instance.to != null) {
-            ITextComponent text = new TranslationTextComponent("jea.item.tooltip.change_dimension.to", IngredientUtil.dim(instance.to.getLocation()));
-            mc.fontRenderer.drawText(matrixStack, text, 5, SPACE_TOP + y, 0x000000);
+            Component text = new TranslatableComponent("jea.item.tooltip.change_dimension.to", IngredientUtil.dim(instance.to.location()));
+            mc.font.draw(poseStack, text, 5, SPACE_TOP + y, 0x000000);
         }
-        matrixStack.push();
-        matrixStack.translate(30, SPACE_TOP + 90, 0);
-        JeaRender.normalize(matrixStack);
-        JeaRender.transformForEntityRenderSide(matrixStack, false, 1.9f);
+        poseStack.pushPose();
+        poseStack.translate(30, SPACE_TOP + 90, 0);
+        JeaRender.normalize(poseStack);
+        JeaRender.transformForEntityRenderSide(poseStack, false, 1.9f);
         SteveRender.defaultPose(mc);
         SteveRender.limbSwing(0.5f);
         SteveRender.clearEquipment(mc);
-        SteveRender.renderSteveStatic(mc, matrixStack, buffer);
-        matrixStack.pop();
-        if (World.THE_END.equals(instance.to)) {
-            matrixStack.push();
-            matrixStack.translate(RECIPE_WIDTH - 30, SPACE_TOP + 90, 0);
-            JeaRender.normalize(matrixStack);
-            matrixStack.translate(0, -1.5, 0);
-            JeaRender.transformForEntityRenderSide(matrixStack, true, 0.8f);
-            matrixStack.rotate(Vector3f.XP.rotationDegrees(45));
-            this.renderEndPortal(matrixStack, buffer, mc);
-            matrixStack.pop();
-        } else if (ModList.get().isLoaded("mythicbotany") && instance.to != null
-                && MYTHICBOTANY_ALFHEIM.equals(instance.to.getLocation())) {
-            matrixStack.push();
-            matrixStack.translate(RECIPE_WIDTH - 30, SPACE_TOP + 90, 0);
-            JeaRender.normalize(matrixStack);
-            JeaRender.transformForEntityRenderSide(matrixStack, true, 0.7f);
-            AlfPortalRenderer.renderAlfPortal(matrixStack, buffer, mc, true);
-            matrixStack.pop();
+        SteveRender.renderSteveStatic(mc, poseStack, buffer);
+        poseStack.popPose();
+        if (Level.END.equals(instance.to)) {
+            poseStack.pushPose();
+            poseStack.translate(RECIPE_WIDTH - 30, SPACE_TOP + 90, 0);
+            JeaRender.normalize(poseStack);
+            poseStack.translate(0, -1.5, 0);
+            JeaRender.transformForEntityRenderSide(poseStack, true, 0.8f);
+            poseStack.mulPose(Vector3f.XP.rotationDegrees(45));
+            this.renderEndPortal(poseStack, buffer, mc);
+            poseStack.popPose();
+//        } else if (ModList.get().isLoaded("mythicbotany") && instance.to != null
+//                && MYTHICBOTANY_ALFHEIM.equals(instance.to.location())) {
+//            poseStack.pushPose();
+//            poseStack.translate(RECIPE_WIDTH - 30, SPACE_TOP + 90, 0);
+//            JeaRender.normalize(poseStack);
+//            JeaRender.transformForEntityRenderSide(poseStack, true, 0.7f);
+//            AlfPortalRenderer.renderAlfPortal(poseStack, buffer, mc, true);
+//            poseStack.popPose();
         } else {
-            matrixStack.push();
-            matrixStack.translate(RECIPE_WIDTH - 30, SPACE_TOP + 90, 0);
-            JeaRender.normalize(matrixStack);
-            JeaRender.transformForEntityRenderSide(matrixStack, true, 0.8f);
-            renderNetherPortal(matrixStack, buffer, mc);
-            matrixStack.pop();
+            poseStack.pushPose();
+            poseStack.translate(RECIPE_WIDTH - 30, SPACE_TOP + 90, 0);
+            JeaRender.normalize(poseStack);
+            JeaRender.transformForEntityRenderSide(poseStack, true, 0.8f);
+            renderNetherPortal(poseStack, buffer, mc);
+            poseStack.popPose();
         }
     }
     
     @SuppressWarnings("deprecation")
-    public static void renderNetherPortal(MatrixStack matrixStack, IRenderTypeBuffer buffer, Minecraft mc) {
-        BlockRendererDispatcher brd = mc.getBlockRendererDispatcher();
-        BlockState obsidian = Blocks.OBSIDIAN.getDefaultState();
-        BlockState portal = Blocks.NETHER_PORTAL.getDefaultState().with(BlockStateProperties.HORIZONTAL_AXIS, Direction.Axis.X);
-        int light = LightTexture.packLight(15, 15);
+    public static void renderNetherPortal(PoseStack poseStack, MultiBufferSource buffer, Minecraft mc) {
+        BlockRenderDispatcher brd = mc.getBlockRenderer();
+        BlockState obsidian = Blocks.OBSIDIAN.defaultBlockState();
+        BlockState portal = Blocks.NETHER_PORTAL.defaultBlockState().setValue(BlockStateProperties.HORIZONTAL_AXIS, Direction.Axis.X);
+        int light = LightTexture.pack(15, 15);
         int overlay = OverlayTexture.NO_OVERLAY;
-        matrixStack.push();
-        matrixStack.translate(-2, 0, -0.5);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.pop();
+        poseStack.pushPose();
+        poseStack.translate(-2, 0, -0.5);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.popPose();
         for (int i = 1; i <= 3; i++) {
-            matrixStack.push();
-            matrixStack.translate(-2, i, -0.5);
-            brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-            matrixStack.translate(1, 0, 0);
-            brd.renderBlock(portal, matrixStack, buffer, light, overlay);
-            matrixStack.translate(1, 0, 0);
-            brd.renderBlock(portal, matrixStack, buffer, light, overlay);
-            matrixStack.translate(1, 0, 0);
-            brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-            matrixStack.pop();
+            poseStack.pushPose();
+            poseStack.translate(-2, i, -0.5);
+            brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+            poseStack.translate(1, 0, 0);
+            brd.renderSingleBlock(portal, poseStack, buffer, light, overlay);
+            poseStack.translate(1, 0, 0);
+            brd.renderSingleBlock(portal, poseStack, buffer, light, overlay);
+            poseStack.translate(1, 0, 0);
+            brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+            poseStack.popPose();
         }
-        matrixStack.push();
-        matrixStack.translate(-2, 4, -0.5);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(obsidian, matrixStack, buffer, light, overlay);
-        matrixStack.pop();
+        poseStack.pushPose();
+        poseStack.translate(-2, 4, -0.5);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(obsidian, poseStack, buffer, light, overlay);
+        poseStack.popPose();
     }
 
     @SuppressWarnings("deprecation")
-    private void renderEndPortal(MatrixStack matrixStack, IRenderTypeBuffer buffer, Minecraft mc) {
-        BlockRendererDispatcher brd = mc.getBlockRendererDispatcher();
-        BlockState frame_n = Blocks.END_PORTAL_FRAME.getDefaultState().with(BlockStateProperties.HORIZONTAL_FACING, Direction.NORTH).with(BlockStateProperties.EYE, true);
-        BlockState frame_s = Blocks.END_PORTAL_FRAME.getDefaultState().with(BlockStateProperties.HORIZONTAL_FACING, Direction.SOUTH).with(BlockStateProperties.EYE, true);
-        BlockState frame_w = Blocks.END_PORTAL_FRAME.getDefaultState().with(BlockStateProperties.HORIZONTAL_FACING, Direction.WEST).with(BlockStateProperties.EYE, true);
-        BlockState frame_e = Blocks.END_PORTAL_FRAME.getDefaultState().with(BlockStateProperties.HORIZONTAL_FACING, Direction.EAST).with(BlockStateProperties.EYE, true);
-        BlockState portal = Blocks.END_PORTAL.getDefaultState();
-        int light = LightTexture.packLight(15, 15);
+    private void renderEndPortal(PoseStack poseStack, MultiBufferSource buffer, Minecraft mc) {
+        BlockRenderDispatcher brd = mc.getBlockRenderer();
+        BlockState frame_n = Blocks.END_PORTAL_FRAME.defaultBlockState().setValue(BlockStateProperties.HORIZONTAL_FACING, Direction.NORTH).setValue(BlockStateProperties.EYE, true);
+        BlockState frame_s = Blocks.END_PORTAL_FRAME.defaultBlockState().setValue(BlockStateProperties.HORIZONTAL_FACING, Direction.SOUTH).setValue(BlockStateProperties.EYE, true);
+        BlockState frame_w = Blocks.END_PORTAL_FRAME.defaultBlockState().setValue(BlockStateProperties.HORIZONTAL_FACING, Direction.WEST).setValue(BlockStateProperties.EYE, true);
+        BlockState frame_e = Blocks.END_PORTAL_FRAME.defaultBlockState().setValue(BlockStateProperties.HORIZONTAL_FACING, Direction.EAST).setValue(BlockStateProperties.EYE, true);
+        BlockState portal = Blocks.END_PORTAL.defaultBlockState();
+        int light = LightTexture.pack(15, 15);
         int overlay = OverlayTexture.NO_OVERLAY;
-        matrixStack.push();
-        matrixStack.translate(-1.5, 0, -2.5);
-        brd.renderBlock(frame_s, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(frame_s, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(frame_s, matrixStack, buffer, light, overlay);
-        matrixStack.pop();
-        matrixStack.push();
-        matrixStack.translate(-1.5, 0, 1.5);
-        brd.renderBlock(frame_n, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(frame_n, matrixStack, buffer, light, overlay);
-        matrixStack.translate(1, 0, 0);
-        brd.renderBlock(frame_n, matrixStack, buffer, light, overlay);
-        matrixStack.pop();
-        matrixStack.push();
-        matrixStack.translate(-2.5, 0, -1.5);
-        brd.renderBlock(frame_e, matrixStack, buffer, light, overlay);
-        matrixStack.translate(0, 0, 1);
-        brd.renderBlock(frame_e, matrixStack, buffer, light, overlay);
-        matrixStack.translate(0, 0, 1);
-        brd.renderBlock(frame_e, matrixStack, buffer, light, overlay);
-        matrixStack.pop();
-        matrixStack.push();
-        matrixStack.translate(1.5, 0, -1.5);
-        brd.renderBlock(frame_w, matrixStack, buffer, light, overlay);
-        matrixStack.translate(0, 0, 1);
-        brd.renderBlock(frame_w, matrixStack, buffer, light, overlay);
-        matrixStack.translate(0, 0, 1);
-        brd.renderBlock(frame_w, matrixStack, buffer, light, overlay);
-        matrixStack.pop();
-        matrixStack.push();
-        matrixStack.translate(-1.5, 0, -1.5);
+        poseStack.pushPose();
+        poseStack.translate(-1.5, 0, -2.5);
+        brd.renderSingleBlock(frame_s, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(frame_s, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(frame_s, poseStack, buffer, light, overlay);
+        poseStack.popPose();
+        poseStack.pushPose();
+        poseStack.translate(-1.5, 0, 1.5);
+        brd.renderSingleBlock(frame_n, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(frame_n, poseStack, buffer, light, overlay);
+        poseStack.translate(1, 0, 0);
+        brd.renderSingleBlock(frame_n, poseStack, buffer, light, overlay);
+        poseStack.popPose();
+        poseStack.pushPose();
+        poseStack.translate(-2.5, 0, -1.5);
+        brd.renderSingleBlock(frame_e, poseStack, buffer, light, overlay);
+        poseStack.translate(0, 0, 1);
+        brd.renderSingleBlock(frame_e, poseStack, buffer, light, overlay);
+        poseStack.translate(0, 0, 1);
+        brd.renderSingleBlock(frame_e, poseStack, buffer, light, overlay);
+        poseStack.popPose();
+        poseStack.pushPose();
+        poseStack.translate(1.5, 0, -1.5);
+        brd.renderSingleBlock(frame_w, poseStack, buffer, light, overlay);
+        poseStack.translate(0, 0, 1);
+        brd.renderSingleBlock(frame_w, poseStack, buffer, light, overlay);
+        poseStack.translate(0, 0, 1);
+        brd.renderSingleBlock(frame_w, poseStack, buffer, light, overlay);
+        poseStack.popPose();
+        poseStack.pushPose();
+        poseStack.translate(-1.5, 0, -1.5);
         for (int x = 0; x < 3; x++) {
             for (int z = 0; z < 3; z++) {
-                this.tile.setWorldAndPos(Objects.requireNonNull(mc.world), BlockPos.ZERO);
-                this.tile.cachedBlockState = portal;
+                this.tile.setLevel(Objects.requireNonNull(mc.level));
+                this.tile.blockState = portal;
                 if (this.tileRender == null) {
-                    this.tileRender = TileEntityRendererDispatcher.instance.getRenderer(this.tile);
+                    this.tileRender = Minecraft.getInstance().getBlockEntityRenderDispatcher().getRenderer(this.tile);
                 }
                 if (this.tileRender != null) {
-                    this.tileRender.render(this.tile, mc.getRenderPartialTicks(), matrixStack, buffer, light, overlay);
+                    this.tileRender.render(this.tile, mc.getFrameTime(), poseStack, buffer, light, overlay);
                 }
-                matrixStack.translate(0, 0, 1);
+                poseStack.translate(0, 0, 1);
             }
-            matrixStack.translate(1, 0, -3);
+            poseStack.translate(1, 0, -3);
         }
-        matrixStack.pop();
+        poseStack.popPose();
     }
 
     @Override
-    public void addTooltip(List<ITextComponent> tooltip, IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.Instance instance, double mouseX, double mouseY) {
+    public void addTooltip(List<Component> tooltip, IAdvancementInfo advancement, String criterionKey, ChangeDimensionTrigger.TriggerInstance instance, double mouseX, double mouseY) {
 
     }
 }
