@@ -1,7 +1,6 @@
 package de.melanx.jea.plugins.vanilla.criteria;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.blaze3d.matrix.MatrixStack;
+import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.datafixers.util.Pair;
 import de.melanx.jea.api.client.IAdvancementInfo;
 import de.melanx.jea.api.client.Jea;
@@ -12,71 +11,71 @@ import de.melanx.jea.util.IngredientUtil;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.IRecipeLayout;
 import mezz.jei.api.ingredients.IIngredients;
-import net.minecraft.advancements.criterion.ConsumeItemTrigger;
+import net.minecraft.advancements.critereon.ConsumeItemTrigger;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.IRenderTypeBuffer;
-import net.minecraft.item.Food;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.potion.EffectInstance;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TranslationTextComponent;
+import net.minecraft.client.renderer.MultiBufferSource;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.food.FoodProperties;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 
 import java.util.List;
 import java.util.Optional;
 
-public class ConsumeItemInfo implements ICriterionInfo<ConsumeItemTrigger.Instance> {
+public class ConsumeItemInfo implements ICriterionInfo<ConsumeItemTrigger.TriggerInstance> {
 
     @Override
-    public Class<ConsumeItemTrigger.Instance> criterionClass() {
-        return ConsumeItemTrigger.Instance.class;
+    public Class<ConsumeItemTrigger.TriggerInstance> criterionClass() {
+        return ConsumeItemTrigger.TriggerInstance.class;
     }
 
     @Override
-    public void setIngredients(IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.Instance instance, IIngredients ii) {
-        ii.setInputLists(VanillaTypes.ITEM, ImmutableList.of(
+    public void setIngredients(IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.TriggerInstance instance, IIngredients ii) {
+        ii.setInputLists(VanillaTypes.ITEM, List.of(
                 IngredientUtil.fromItemPredicate(instance.item, Items.BREAD)
         ));
     }
 
     @Override
-    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.Instance instance, IIngredients ii) {
+    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.TriggerInstance instance, IIngredients ii) {
         layout.getItemStacks().init(0, true, Jea.LARGE_ITEM, 10, SPACE_TOP + 20, 48, 48, 0, 0);
         layout.getItemStacks().set(ii);
     }
 
     @Override
-    public void draw(MatrixStack matrixStack, IRenderTypeBuffer buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.Instance instance, double mouseX, double mouseY) {
+    public void draw(PoseStack poseStack, MultiBufferSource buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.TriggerInstance instance, double mouseX, double mouseY) {
         ItemStack stack = JeaRender.cycle(IngredientUtil.fromItemPredicate(instance.item, Items.BREAD));
-        Food food = stack.getItem().getFood();
-        if (food != null && food.getHealing() > 0) {
-            matrixStack.push();
-            matrixStack.translate(10, SPACE_TOP + 74, 0);
-            RenderMisc.renderFood(matrixStack, food, 5);
-            matrixStack.pop();
+        FoodProperties food = stack.getItem().getFoodProperties();
+        if (food != null && food.getNutrition() > 0) {
+            poseStack.pushPose();
+            poseStack.translate(10, SPACE_TOP + 74, 0);
+            RenderMisc.renderFood(poseStack, food, 5);
+            poseStack.popPose();
             int x = 0;
             int y = 0;
-            for (Pair<EffectInstance, Float> effect : food.getEffects()) {
-                matrixStack.push();
-                matrixStack.translate(63 + (x * 22), SPACE_TOP + 7 + (y * 22), 0);
-                RenderMisc.renderMobEffect(matrixStack, mc, effect.getFirst().getPotion());
-                matrixStack.pop();
+            for (Pair<MobEffectInstance, Float> effect : food.getEffects()) {
+                poseStack.pushPose();
+                poseStack.translate(63 + (x * 22), SPACE_TOP + 7 + (y * 22), 0);
+                RenderMisc.renderMobEffect(poseStack, mc, effect.getFirst().getEffect());
+                poseStack.popPose();
                 if (x < 3) { x += 1; } else if (y < 3) { x = 0; y += 1; } else { break; }
             }
         } else {
-            ITextComponent text = new TranslationTextComponent("jea.item.tooltip.consume_item.tooltip");
-            mc.fontRenderer.drawText(matrixStack, text, 5, SPACE_TOP + 74, 0x000000);
+            Component text = new TranslatableComponent("jea.item.tooltip.consume_item.tooltip");
+            mc.font.draw(poseStack, text, 5, SPACE_TOP + 74, 0x000000);
         }
     }
 
     @Override
-    public void addTooltip(List<ITextComponent> tooltip, IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.Instance instance, double mouseX, double mouseY) {
+    public void addTooltip(List<Component> tooltip, IAdvancementInfo advancement, String criterionKey, ConsumeItemTrigger.TriggerInstance instance, double mouseX, double mouseY) {
         ItemStack stack = JeaRender.cycle(IngredientUtil.fromItemPredicate(instance.item, Items.BREAD));
-        Food food = stack.getItem().getFood();
+        FoodProperties food = stack.getItem().getFoodProperties();
         if (food != null) {
             int x = 0;
             int y = 0;
-            for (Pair<EffectInstance, Float> effect : food.getEffects()) {
+            for (Pair<MobEffectInstance, Float> effect : food.getEffects()) {
                 RenderMisc.addMobEffectTooltip(tooltip, effect.getFirst(), Optional.of(effect.getSecond()), 63 + (x * 22), SPACE_TOP + 7 + (y * 22), mouseX, mouseY);
                 if (x < 3) { x += 1; } else if (y < 3) { x = 0; y += 1; } else { break; }
             }
