@@ -1,7 +1,7 @@
 package de.melanx.jea.plugins.vanilla.criteria;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.blaze3d.matrix.MatrixStack;
+import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.math.Vector3f;
 import de.melanx.jea.api.client.IAdvancementInfo;
 import de.melanx.jea.api.client.criterion.ICriterionInfo;
 import de.melanx.jea.render.JeaRender;
@@ -12,15 +12,17 @@ import io.github.noeppi_noeppi.libx.render.ClientTickHandler;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.IRecipeLayout;
 import mezz.jei.api.ingredients.IIngredients;
-import net.minecraft.advancements.criterion.FilledBucketTrigger;
+import net.minecraft.advancements.critereon.FilledBucketTrigger;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.IRenderTypeBuffer;
-import net.minecraft.entity.EntityType;
-import net.minecraft.fluid.Fluids;
-import net.minecraft.item.*;
-import net.minecraft.util.Hand;
-import net.minecraft.util.math.vector.Vector3f;
-import net.minecraft.util.text.ITextComponent;
+import net.minecraft.client.renderer.MultiBufferSource;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.item.BucketItem;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.item.MobBucketItem;
+import net.minecraft.world.level.material.Fluids;
 import net.minecraftforge.common.util.LazyOptional;
 import net.minecraftforge.fluids.FluidAttributes;
 import net.minecraftforge.fluids.FluidStack;
@@ -32,35 +34,35 @@ import javax.annotation.Nullable;
 import java.lang.reflect.Method;
 import java.util.List;
 
-public class FillBucketInfo implements ICriterionInfo<FilledBucketTrigger.Instance> {
+public class FillBucketInfo implements ICriterionInfo<FilledBucketTrigger.TriggerInstance> {
     
     private Method fishBucketSupplier = null;
     
     @Override
-    public Class<FilledBucketTrigger.Instance> criterionClass() {
-        return FilledBucketTrigger.Instance.class;
+    public Class<FilledBucketTrigger.TriggerInstance> criterionClass() {
+        return FilledBucketTrigger.TriggerInstance.class;
     }
 
     @Override
-    public void setIngredients(IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.Instance instance, IIngredients ii) {
-        ii.setInputLists(VanillaTypes.ITEM, ImmutableList.of(
-                ImmutableList.of(new ItemStack(Items.BUCKET)),
+    public void setIngredients(IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.TriggerInstance instance, IIngredients ii) {
+        ii.setInputLists(VanillaTypes.ITEM, List.of(
+                List.of(new ItemStack(Items.BUCKET)),
                 IngredientUtil.fromItemPredicate(instance.item, Items.WATER_BUCKET, Items.LAVA_BUCKET)
         ));
     }
 
     @Override
-    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.Instance instance, IIngredients ii) {
+    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.TriggerInstance instance, IIngredients ii) {
         layout.getItemStacks().init(0, true, 91, SPACE_TOP + 15);
         layout.getItemStacks().init(1, true, 109, SPACE_TOP + 15);
         layout.getItemStacks().set(ii);
     }
 
     @Override
-    public void draw(MatrixStack matrixStack, IRenderTypeBuffer buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.Instance instance, double mouseX, double mouseY) {
-        JeaRender.slotAt(matrixStack, 91, SPACE_TOP + 15);
-        JeaRender.slotAt(matrixStack, 109, SPACE_TOP + 15);
-        float animationTime = (ClientTickHandler.ticksInGame + mc.getRenderPartialTicks()) % 52f;
+    public void draw(PoseStack poseStack, MultiBufferSource buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.TriggerInstance instance, double mouseX, double mouseY) {
+        JeaRender.slotAt(poseStack, 91, SPACE_TOP + 15);
+        JeaRender.slotAt(poseStack, 109, SPACE_TOP + 15);
+        float animationTime = (ClientTickHandler.ticksInGame + mc.getFrameTime()) % 52f;
         ItemStack fullBucket = getStack(IngredientUtil.fromItemPredicate(instance.item));
         float swing;
         boolean insideBucket;
@@ -82,11 +84,11 @@ public class FillBucketInfo implements ICriterionInfo<FilledBucketTrigger.Instan
         
         if (!insideBucket) {
             fluid = new FluidStack(Fluids.WATER, FluidAttributes.BUCKET_VOLUME);
-            if (fullBucket.getItem() instanceof FishBucketItem) {
-                fish = this.getFish((FishBucketItem) fullBucket.getItem());
+            if (fullBucket.getItem() instanceof MobBucketItem mobBucket) {
+                fish = this.getBucketMob(mobBucket);
             }
-            if (fullBucket.getItem() instanceof BucketItem) {
-                fluid = new FluidStack(((BucketItem) fullBucket.getItem()).getFluid(), FluidAttributes.BUCKET_VOLUME);
+            if (fullBucket.getItem() instanceof BucketItem bucket) {
+                fluid = new FluidStack(bucket.getFluid(), FluidAttributes.BUCKET_VOLUME);
             } else {
                 LazyOptional<IFluidHandlerItem> tankCap = fullBucket.getCapability(CapabilityFluidHandler.FLUID_HANDLER_ITEM_CAPABILITY);
                 if (tankCap.isPresent()) {
@@ -97,27 +99,27 @@ public class FillBucketInfo implements ICriterionInfo<FilledBucketTrigger.Instan
             }
         }
         
-        matrixStack.push();
-        matrixStack.translate(30, SPACE_TOP + 90, 0);
-        JeaRender.normalize(matrixStack);
-        JeaRender.transformForEntityRenderSide(matrixStack, false, 2.8f);
+        poseStack.pushPose();
+        poseStack.translate(30, SPACE_TOP + 90, 0);
+        JeaRender.normalize(poseStack);
+        JeaRender.transformForEntityRenderSide(poseStack, false, 2.8f);
         SteveRender.defaultPose(mc);
-        SteveRender.swing(swing, Hand.MAIN_HAND);
+        SteveRender.swing(swing, InteractionHand.MAIN_HAND);
         SteveRender.setEquipmentHand(mc, insideBucket ? fullBucket : new ItemStack(Items.BUCKET));
-        SteveRender.renderSteve(mc, matrixStack, buffer);
-        matrixStack.pop();
+        SteveRender.renderSteve(mc, poseStack, buffer);
+        poseStack.popPose();
         
-        matrixStack.push();
-        matrixStack.translate(RECIPE_WIDTH- 40, SPACE_TOP + 80, 0);
-        JeaRender.normalize(matrixStack);
-        matrixStack.rotate(Vector3f.XP.rotationDegrees(-18));
-        JeaRender.transformForEntityRenderFront(matrixStack, true, 5);
-        SpecialModels.renderFluidPool(matrixStack, buffer, mc, fluid, fish);
-        matrixStack.pop();
+        poseStack.pushPose();
+        poseStack.translate(RECIPE_WIDTH- 40, SPACE_TOP + 80, 0);
+        JeaRender.normalize(poseStack);
+        poseStack.mulPose(Vector3f.XP.rotationDegrees(-18));
+        JeaRender.transformForEntityRenderFront(poseStack, true, 5);
+        SpecialModels.renderFluidPool(poseStack, buffer, mc, fluid, fish);
+        poseStack.popPose();
     }
     
     @Override
-    public void addTooltip(List<ITextComponent> tooltip, IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.Instance instance, double mouseX, double mouseY) {
+    public void addTooltip(List<Component> tooltip, IAdvancementInfo advancement, String criterionKey, FilledBucketTrigger.TriggerInstance instance, double mouseX, double mouseY) {
 
     }
 
@@ -128,16 +130,16 @@ public class FillBucketInfo implements ICriterionInfo<FilledBucketTrigger.Instan
     }
     
     @Nullable
-    private EntityType<?> getFish(FishBucketItem bucket) {
+    private EntityType<?> getBucketMob(MobBucketItem bucket) {
         try {
             if (this.fishBucketSupplier == null) {
-                this.fishBucketSupplier = FishBucketItem.class.getDeclaredMethod("getFishType");
+                this.fishBucketSupplier = MobBucketItem.class.getDeclaredMethod("getFishType");
                 this.fishBucketSupplier.setAccessible(true);
             }
             return (EntityType<?>) this.fishBucketSupplier.invoke(bucket);
         } catch (ReflectiveOperationException e) {
             this.fishBucketSupplier = null;
-            return bucket.fishType;
+            return bucket.type;
         }
     }
 }
