@@ -1,7 +1,6 @@
 package de.melanx.jea.plugins.vanilla.criteria;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.blaze3d.matrix.MatrixStack;
+import com.mojang.blaze3d.vertex.PoseStack;
 import de.melanx.jea.api.client.IAdvancementInfo;
 import de.melanx.jea.api.client.Jea;
 import de.melanx.jea.api.client.criterion.ICriterionInfo;
@@ -11,54 +10,54 @@ import de.melanx.jea.util.IngredientUtil;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.IRecipeLayout;
 import mezz.jei.api.ingredients.IIngredients;
-import net.minecraft.advancements.criterion.UsedTotemTrigger;
+import net.minecraft.advancements.critereon.UsedTotemTrigger;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.IRenderTypeBuffer;
-import net.minecraft.item.Items;
-import net.minecraft.util.Hand;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TranslationTextComponent;
+import net.minecraft.client.renderer.MultiBufferSource;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.item.Items;
 
 import java.util.List;
 
-public class UseTotemInfo implements ICriterionInfo<UsedTotemTrigger.Instance> {
+public class UseTotemInfo implements ICriterionInfo<UsedTotemTrigger.TriggerInstance> {
 
     @Override
-    public Class<UsedTotemTrigger.Instance> criterionClass() {
-        return UsedTotemTrigger.Instance.class;
+    public Class<UsedTotemTrigger.TriggerInstance> criterionClass() {
+        return UsedTotemTrigger.TriggerInstance.class;
     }
 
     @Override
-    public void setIngredients(IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.Instance instance, IIngredients ii) {
-        ii.setInputLists(VanillaTypes.ITEM, ImmutableList.of(
+    public void setIngredients(IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.TriggerInstance instance, IIngredients ii) {
+        ii.setInputLists(VanillaTypes.ITEM, List.of(
                 IngredientUtil.fromItemPredicate(instance.item, true, Items.TOTEM_OF_UNDYING)
         ));
     }
 
     @Override
-    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.Instance instance, IIngredients ii) {
+    public void setRecipe(IRecipeLayout layout, IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.TriggerInstance instance, IIngredients ii) {
          layout.getItemStacks().init(0, true, Jea.LARGE_ITEM, (RECIPE_WIDTH / 2) + 10, SPACE_TOP + 36, 48, 48, 0, 0);
          layout.getItemStacks().set(ii);
     }
 
     @Override
-    public void draw(MatrixStack matrixStack, IRenderTypeBuffer buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.Instance instance, double mouseX, double mouseY) {
-        matrixStack.push();
-        matrixStack.translate(30, SPACE_TOP + 85, 0);
-        JeaRender.normalize(matrixStack);
-        JeaRender.transformForEntityRenderFront(matrixStack, false, 2.7f);
+    public void draw(PoseStack poseStack, MultiBufferSource buffer, Minecraft mc, IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.TriggerInstance instance, double mouseX, double mouseY) {
+        poseStack.pushPose();
+        poseStack.translate(30, SPACE_TOP + 85, 0);
+        JeaRender.normalize(poseStack);
+        JeaRender.transformForEntityRenderFront(poseStack, false, 2.7f);
         SteveRender.defaultPose(mc);
         SteveRender.hurtTime(10);
-        SteveRender.use(10, Hand.MAIN_HAND);
+        SteveRender.use(10, InteractionHand.MAIN_HAND);
         SteveRender.setEquipmentHand(mc, JeaRender.cycle(IngredientUtil.fromItemPredicate(instance.item, true, Items.TOTEM_OF_UNDYING)));
-        SteveRender.renderSteve(mc, matrixStack, buffer);
-        matrixStack.pop();
-        ITextComponent text = new TranslationTextComponent("jea.item.tooltip.totem");
-        mc.fontRenderer.drawText(matrixStack, text, 60, SPACE_TOP + 15, 0x000000);
+        SteveRender.renderSteve(mc, poseStack, buffer);
+        poseStack.popPose();
+        Component text = new TranslatableComponent("jea.item.tooltip.totem");
+        mc.font.draw(poseStack, text, 60, SPACE_TOP + 15, 0x000000);
     }
 
     @Override
-    public void addTooltip(List<ITextComponent> tooltip, IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.Instance instance, double mouseX, double mouseY) {
+    public void addTooltip(List<Component> tooltip, IAdvancementInfo advancement, String criterionKey, UsedTotemTrigger.TriggerInstance instance, double mouseX, double mouseY) {
 
     }
 }
