@@ -1,21 +1,25 @@
 package de.melanx.jea.util;
 
 import com.google.common.collect.ImmutableList;
-import net.minecraft.advancements.criterion.*;
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
-import net.minecraft.client.resources.I18n;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.nbt.StringNBT;
-import net.minecraft.state.Property;
-import net.minecraft.util.IItemProvider;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.text.*;
+import net.minecraft.ChatFormatting;
+import net.minecraft.advancements.critereon.*;
+import net.minecraft.client.resources.language.I18n;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.StringTag;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.network.chat.TextComponent;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.level.ItemLike;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.Property;
 
 import javax.annotation.Nullable;
 import java.util.*;
@@ -24,108 +28,108 @@ import java.util.stream.Collectors;
 
 public class IngredientUtil {
     
-    public static List<ItemStack> ingredients(@Nullable IItemProvider input, IItemProvider... defaults) {
+    public static List<ItemStack> ingredients(@Nullable ItemLike input, ItemLike... defaults) {
         if (input == null) {
             return Arrays.stream(defaults).map(item -> {
                 ItemStack stack = new ItemStack(item.asItem());
-                stack.setDisplayName(new TranslationTextComponent("jea.item.tooltip.any_item").mergeStyle(TextFormatting.GOLD));
+                stack.setHoverName(new TranslatableComponent("jea.item.tooltip.any_item").withStyle(ChatFormatting.GOLD));
                 return stack;
             }).collect(Collectors.toList());
         } else {
-            return ImmutableList.of(new ItemStack(input.asItem()));
+            return List.of(new ItemStack(input.asItem()));
         }
     }
     
-    public static List<ItemStack> fromItemPredicate(ItemPredicate predicate, IItemProvider... defaults) {
+    public static List<ItemStack> fromItemPredicate(ItemPredicate predicate, ItemLike... defaults) {
         return fromItemPredicate(predicate, false, defaults);
     }
     
-    public static List<ItemStack> fromItemPredicate(ItemPredicate predicate, boolean noAny, IItemProvider... defaults) {
+    public static List<ItemStack> fromItemPredicate(ItemPredicate predicate, boolean noAny, ItemLike... defaults) {
         return fromItemPredicate(predicate, null, noAny, defaults);
     }
     
-    public static List<ItemStack> fromItemPredicate(ItemPredicate predicate, @Nullable IFormattableTextComponent additionalLine, boolean noAny, IItemProvider... defaults) {
+    public static List<ItemStack> fromItemPredicate(ItemPredicate predicate, @Nullable MutableComponent additionalLine, boolean noAny, ItemLike... defaults) {
         List<Item> items;
         boolean anyItemTitle = false;
-        if (predicate.item != null) {
-            items = ImmutableList.of(predicate.item);
-        } else if (predicate.tag != null && !predicate.tag.getAllElements().isEmpty()) {
-            items = predicate.tag.getAllElements();
+        if (predicate.items != null && !predicate.items.isEmpty()) {
+            items = List.copyOf(predicate.items);
+        } else if (predicate.tag != null && !predicate.tag.getValues().isEmpty()) {
+            items = predicate.tag.getValues();
         } else {
             anyItemTitle = !noAny;
             items = Arrays.stream(defaults).map(p -> p == null ? null : p.asItem()).collect(Collectors.toList());
         }
-        List<IFormattableTextComponent> tooltip = new ArrayList<>();
-        if (!predicate.count.isUnbounded()) {
-            tooltip.add(new TranslationTextComponent("jea.item.tooltip.amount", text(predicate.count)));
+        List<MutableComponent> tooltip = new ArrayList<>();
+        if (!predicate.count.isAny()) {
+            tooltip.add(new TranslatableComponent("jea.item.tooltip.amount", text(predicate.count)));
         }
-        if (!predicate.durability.isUnbounded()) {
-            tooltip.add(new TranslationTextComponent("jea.item.tooltip.durability", text(predicate.durability)));
+        if (!predicate.durability.isAny()) {
+            tooltip.add(new TranslatableComponent("jea.item.tooltip.durability", text(predicate.durability)));
         }
         for (EnchantmentPredicate ench : predicate.enchantments) {
-            tooltip.add(new TranslationTextComponent(
+            tooltip.add(new TranslatableComponent(
                     "jea.item.tooltip.enchantment",
-                    ench.enchantment.getDisplayName(1),
-                    text(ench.levels, level -> new TranslationTextComponent("enchantment.level." + level))
+                    ench.enchantment.getFullname(1),
+                    text(ench.level, level -> new TranslatableComponent("enchantment.level." + level))
             ));
         }
-        for (EnchantmentPredicate ench : predicate.bookEnchantments) {
-            tooltip.add(new TranslationTextComponent(
+        for (EnchantmentPredicate ench : predicate.storedEnchantments) {
+            tooltip.add(new TranslatableComponent(
                     "jea.item.tooltip.book_enchantment",
-                    ench.enchantment.getDisplayName(1),
-                    text(ench.levels, level -> new TranslationTextComponent("enchantment.level." + level))
+                    ench.enchantment.getFullname(1),
+                    text(ench.level, level -> new TranslatableComponent("enchantment.level." + level))
             ));
         }
         if (predicate.potion != null) {
-            tooltip.add(new TranslationTextComponent("jea.item.tooltip.potion", new TranslationTextComponent(predicate.potion.getNamePrefixed("item." + Objects.requireNonNull(predicate.potion.getRegistryName()).getNamespace() + ".potion.effect."))));
+            tooltip.add(new TranslatableComponent("jea.item.tooltip.potion", new TranslatableComponent(predicate.potion.getName("item." + Objects.requireNonNull(predicate.potion.getRegistryName()).getNamespace() + ".potion.effect."))));
         }
         if (additionalLine != null) {
             tooltip.add(additionalLine);
         }
-        ListNBT tooltipNBT = new ListNBT();
-        for (IFormattableTextComponent tc : tooltip) {
-            tooltipNBT.add(StringNBT.valueOf(ITextComponent.Serializer.toJson(tc.mergeStyle(TextFormatting.RESET).mergeStyle(TextFormatting.AQUA))));
+        ListTag tooltipNBT = new ListTag();
+        for (MutableComponent tc : tooltip) {
+            tooltipNBT.add(StringTag.valueOf(Component.Serializer.toJson(tc.withStyle(ChatFormatting.RESET).withStyle(ChatFormatting.AQUA))));
         }
         
         List<ItemStack> stacks = new ArrayList<>();
         for (Item item : items) {
             ItemStack stack = item == null ? ItemStack.EMPTY.copy() : new ItemStack(item);
             if (anyItemTitle) {
-                stack.setDisplayName(new TranslationTextComponent("jea.item.tooltip.any_item").mergeStyle(TextFormatting.GOLD));
+                stack.setHoverName(new TranslatableComponent("jea.item.tooltip.any_item").withStyle(ChatFormatting.GOLD));
             }
             getExampleValue(predicate.count).ifPresent(stack::setCount);
-            if (stack.isDamageable()) {
-                getExampleValue(predicate.durability).ifPresent(stack::setDamage);
+            if (stack.isDamageableItem()) {
+                getExampleValue(predicate.durability).ifPresent(stack::setDamageValue);
             }
             if (predicate.nbt.tag != null) {
-                CompoundNBT nbt = stack.getOrCreateTag();
+                CompoundTag nbt = stack.getOrCreateTag();
                 nbt.merge(predicate.nbt.tag);
                 stack.setTag(nbt);
             }
-            if ((stack.getItem() == Items.ENCHANTED_BOOK ? predicate.bookEnchantments : predicate.enchantments).length > 0) {
-                CompoundNBT nbt = stack.getOrCreateTag();
-                ListNBT list = new ListNBT();
-                list.add(new CompoundNBT());
+            if ((stack.getItem() == Items.ENCHANTED_BOOK ? predicate.storedEnchantments : predicate.enchantments).length > 0) {
+                CompoundTag nbt = stack.getOrCreateTag();
+                ListTag list = new ListTag();
+                list.add(new CompoundTag());
                 nbt.put("Enchantments", list);
             }
-            CompoundNBT display = stack.getOrCreateChildTag("display");
+            CompoundTag display = stack.getOrCreateTagElement("display");
             display.put("Lore", tooltipNBT);
             stacks.add(stack);
         }
         return stacks;
     }
     
-    public static IFormattableTextComponent text(MinMaxBounds<?> bounds) {
-        if (bounds.isUnbounded() || (bounds.getMin() == null && bounds.getMax() == null)) {
-            return new TranslationTextComponent("jea.range.unbounded");
+    public static MutableComponent text(MinMaxBounds<?> bounds) {
+        if (bounds.isAny() || (bounds.getMin() == null && bounds.getMax() == null)) {
+            return new TranslatableComponent("jea.range.unbounded");
         } else if (bounds.getMin() == null) {
-            return new TranslationTextComponent("jea.range.lower", numberToString(Objects.requireNonNull(bounds.getMax())));
+            return new TranslatableComponent("jea.range.lower", numberToString(Objects.requireNonNull(bounds.getMax())));
         } else if (bounds.getMax() == null) {
-            return new TranslationTextComponent("jea.range.greater", numberToString(Objects.requireNonNull(bounds.getMin())));
+            return new TranslatableComponent("jea.range.greater", numberToString(Objects.requireNonNull(bounds.getMin())));
         } else if (bounds.getMin().equals(bounds.getMax())) {
-            return new StringTextComponent(numberToString(bounds.getMin()));
+            return new TextComponent(numberToString(bounds.getMin()));
         } else {
-            return new TranslationTextComponent("jea.range.bounded", numberToString(Objects.requireNonNull(bounds.getMin())), numberToString(Objects.requireNonNull(bounds.getMax())));
+            return new TranslatableComponent("jea.range.bounded", numberToString(Objects.requireNonNull(bounds.getMin())), numberToString(Objects.requireNonNull(bounds.getMax())));
         }
     }
     
@@ -138,17 +142,17 @@ public class IngredientUtil {
         }
     }
     
-    public static <T extends Number> IFormattableTextComponent text(MinMaxBounds<T> bounds, Function<T, IFormattableTextComponent> factory) {
-        if (bounds.isUnbounded() || (bounds.getMin() == null && bounds.getMax() == null)) {
-            return new TranslationTextComponent("jea.range.unbounded");
+    public static <T extends Number> MutableComponent text(MinMaxBounds<T> bounds, Function<T, MutableComponent> factory) {
+        if (bounds.isAny() || (bounds.getMin() == null && bounds.getMax() == null)) {
+            return new TranslatableComponent("jea.range.unbounded");
         } else if (bounds.getMin() == null) {
-            return new TranslationTextComponent("jea.range.lower", factory.apply(bounds.getMax()));
+            return new TranslatableComponent("jea.range.lower", factory.apply(bounds.getMax()));
         } else if (bounds.getMax() == null) {
-            return new TranslationTextComponent("jea.range.greater", factory.apply(bounds.getMin()));
+            return new TranslatableComponent("jea.range.greater", factory.apply(bounds.getMin()));
         } else if (bounds.getMin().equals(bounds.getMax())) {
             return factory.apply(bounds.getMin());
         } else {
-            return new TranslationTextComponent("jea.range.bounded", factory.apply(bounds.getMin()), factory.apply(bounds.getMax()));
+            return new TranslatableComponent("jea.range.bounded", factory.apply(bounds.getMin()), factory.apply(bounds.getMax()));
         }
     }
     
@@ -172,8 +176,8 @@ public class IngredientUtil {
     
     public static String dim(ResourceLocation location) {
         String key = "dimension." + location.getNamespace() + "." + location.getPath().replace('/', '.') + ".name";
-        if (I18n.hasKey(key)) {
-            return I18n.format(key);
+        if (I18n.exists(key)) {
+            return I18n.get(key);
         } else {
             return rl(location);
         }
@@ -199,28 +203,28 @@ public class IngredientUtil {
     // T exists because Comparable must hav itself as a type parameter so a Property can not be cast to Property<Comparable<?>>
     public static <T extends Comparable<T>> BlockState getState(@Nullable Block block, @Nullable StatePropertiesPredicate predicate) {
         if (block == null) {
-            return Blocks.AIR.getDefaultState();
+            return Blocks.AIR.defaultBlockState();
         } else {
-            BlockState state = block.getDefaultState();
+            BlockState state = block.defaultBlockState();
             if (predicate != null) {
-                for (StatePropertiesPredicate.Matcher matcher : predicate.matchers) {
-                    Property<?> property = state.getProperties().stream().filter(p -> p.getName().equals(matcher.propertyName)).findFirst().orElse(null);
+                for (StatePropertiesPredicate.PropertyMatcher matcher : predicate.properties) {
+                    Property<?> property = state.getProperties().stream().filter(p -> p.getName().equals(matcher.name)).findFirst().orElse(null);
                     if (property != null) {
                         String valueToMatch = null;
-                        if (matcher instanceof StatePropertiesPredicate.ExactMatcher) {
-                            valueToMatch = ((StatePropertiesPredicate.ExactMatcher) matcher).valueToMatch;
-                        } else if (matcher instanceof StatePropertiesPredicate.RangedMacher) {
-                            if (((StatePropertiesPredicate.RangedMacher) matcher).minimum != null) {
-                                valueToMatch = ((StatePropertiesPredicate.RangedMacher) matcher).minimum;
-                            } else if (((StatePropertiesPredicate.RangedMacher) matcher).maximum != null) {
-                                valueToMatch = ((StatePropertiesPredicate.RangedMacher) matcher).maximum;
+                        if (matcher instanceof StatePropertiesPredicate.ExactPropertyMatcher exactMatcher) {
+                            valueToMatch = exactMatcher.value;
+                        } else if (matcher instanceof StatePropertiesPredicate.RangedPropertyMatcher rangedMatcher) {
+                            if (rangedMatcher.minValue != null) {
+                                valueToMatch = rangedMatcher.minValue;
+                            } else if (rangedMatcher.maxValue != null) {
+                                valueToMatch = rangedMatcher.maxValue;
                             }
                         }
                         if (valueToMatch != null) {
-                            Object value = property.parseValue(valueToMatch).orElse(null);
+                            Object value = property.getValue(valueToMatch).orElse(null);
                             if (value != null) {
                                 //noinspection unchecked
-                                state = state.with((Property<T>) property, (T) value);
+                                state = state.setValue((Property<T>) property, (T) value);
                             }
                         }
                     }
@@ -231,15 +235,15 @@ public class IngredientUtil {
     }
     
     public static List<ItemStack> getBlockIngredients(BlockPredicate predicate) {
-        if (predicate.block != null) {
-            return ImmutableList.of(new ItemStack(predicate.block.asItem()));
-        } else if (predicate.tag != null && !predicate.tag.getAllElements().isEmpty()) {
+        if (predicate.blocks != null && !predicate.blocks.isEmpty()) {
+            return predicate.blocks.stream().map(ItemStack::new).toList();
+        } else if (predicate.tag != null && !predicate.tag.getValues().isEmpty()) {
             //noinspection UnstableApiUsage
-            return predicate.tag.getAllElements().stream().map(Block::asItem).map(ItemStack::new).collect(ImmutableList.toImmutableList());
+            return predicate.tag.getValues().stream().map(Block::asItem).map(ItemStack::new).collect(ImmutableList.toImmutableList());
         } else {
             ItemStack stack = new ItemStack(Blocks.COBBLESTONE);
-            stack.setDisplayName(new TranslationTextComponent("jea.item.tooltip.any_block").mergeStyle(TextFormatting.GOLD));
-            return ImmutableList.of(stack);
+            stack.setHoverName(new TranslatableComponent("jea.item.tooltip.any_block").withStyle(ChatFormatting.GOLD));
+            return List.of(stack);
         }
     }
 }
